# ml_course-code

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  pyproject.toml
01_cuda/: CMakeLists.txt
01_cuda/matrix_multiplication/src/: CMakeLists.txt  cpu.cpp  cpu.h  cuda.cu  cuda.h  main.cpp  matrix.cpp  matrix.h
01_cuda/template/: CMakeLists.txt
01_cuda/template/src/: CMakeLists.txt
mlc/: __main__.py  resources.py
mlc/command/: __init__.py  base.py  help.py  model_train.py  test.py  train.py
mlc/data/: __init__.py  basedataset.py
mlc/data/spiral/: dataset.py
mlc/model/: __init__.py  basemodel.py  eval.py  train.py
mlc/model/spiral/: model.py
mlc/model/spiral_p/: model.py
mlc/util/: board.py  model.py  plot.py  resources.py
notebooks/: spiral.ipynb
