[tool.poetry]
name = "mlc"
version = "0.1.0"
description = ""
authors = ["Francisco Ganacim <ganacim@impa.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.*"
pre-commit = "^4.1.0"
nbstripout = "^0.8.1"
numpy = "^2.2.3"
matplotlib = "^3.10.0"
torch = "^2.6.0"
torchvision = "^0.21.0"
tqdm = "^4.67.1"
ipympl = "^0.9.6"

[tool.poetry.scripts]
mlc = "mlc.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 120
ignore = ["E203", "W503"]
